force-app/main/default/objects/Invoice_item__c/Invoice_item__c.object-meta.xml
<CustomObject>
    <label>Invoice item2</label>
    <nameField>
        <displayFormat>IIT-{000000}</displayFormat>
        <label>Invoice item Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Invoice items2</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>