force-app/main/default/objects/Invoice_item__c/fields/Price_MRP__c.field-meta.xml
<CustomField>
    <fullName>Price_MRP__c</fullName>
    <label>Price MRP</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>