force-app/main/default/objects/Invoice_item__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <label>Product Name</label>
    <referenceTo>Product__c</referenceTo>
    <relationshipLabel>Invoice items</relationshipLabel>
    <relationshipName>Invoice_items</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>