force-app/main/default/objects/Invoice_item__c/fields/Total_Edit__c.field-meta.xml
<CustomField>
    <fullName>Total_Edit__c</fullName>
    <label>Total Edit</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>