force-app/main/default/objects/Invoice_item__c/fields/Visit__c.field-meta.xml
<CustomField>
    <fullName>Visit__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Visit</label>
    <referenceTo>Visit__c</referenceTo>
    <relationshipLabel>Invoice items</relationshipLabel>
    <relationshipName>Invoice_items</relationshipName>
    <type>Lookup</type>
</CustomField>